[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "hare-bio"
authors = [
  {name="Olivia Smith", email="osmith@utexas.edu"},
]
description = "HARE: A Python pipeline to capture genomic feature enrichment from GWAS sumstats"
version = "1.1.0"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["bioinformatics", "genetics", "evolution", "enrichment", "GWAS"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Topic :: Scientific/Engineering :: Bio-Informatics"
]

[project.scripts]
hare = "hare:main"

[project.urls]
"Homepage" = "https://github.com/ossmith/HARE"
"Bug Tracker" = "https://github.com/ossmith/HARE/issues"
